implemented Xcloud GET, POST, PUT, Delete
