# src/Services/XcloudHttpRequests.ts
@@ -1,4 +1,5 @@
 const httppromise = require('request-promise');
+const request = require('request');
 var sessionstorage = require('sessionstorage');
 import { Log } from '../class/Log'
 import { Logger } from '../class/Logger'
@@ -8,7 +9,9 @@ import { EnumModule } from '../Enum/EnumModule';
 import { XcloudBaseLayer } from './XcloudBaseLayer';
 import { EnumToken } from '../Enum/EnumToken';
 import { response } from 'express';
-
+import { Xcloud } from '../class/Xcloud';
+import Common from '../class/Common'
+import { XcloudRetrieveSuccessResponse } from '../class/Response/XcloudRetrieveSuccessResponse';
 export class XcloudHttpRequests extends XcloudBaseLayer {
 
     constructor() {
@@ -16,16 +19,15 @@ export class XcloudHttpRequests extends XcloudBaseLayer {
     }
 
 
-    //Here we are retriving all ntu
-    //prerequisite: Xcloud Token in Header
+    //Here we are retriving all xcloud circuit
+    //prerequisite: Xcloud cookie in Header
     async getallcircuits(requestBody: any) {
 
         if (await this.isAuthorized() == false)
             return;
 
-
         let options = {
-            url: "http://demo2.xcloudnetworks.com/api/circuit",
+            url: this.baseUrl(Constants.XcloudCircuitURL),
             method: 'GET',
             headers: {
                 'Cookie': sessionstorage.getItem(EnumToken.XcloudCookie),
@@ -36,18 +38,258 @@ export class XcloudHttpRequests extends XcloudBaseLayer {
         let self = this;
         let result;
         await httppromise(options).then(function (response: any) {
-            //self.activePort.ActivePortNTU = response;
             result = response;
-            Logger.updateLogs(new Log(EnumCurrentStatus.Success, EnumModule.ActivePort, Constants.ActivePortNTUSuccess, response, ''));
+            Logger.updateLogs(new Log(EnumCurrentStatus.Success, EnumModule.Xcloud, Constants.XcloudGetCircuitSuccess, response, ''));
         }).catch(function (err: any) {
-
-            Logger.updateLogs(new Log(EnumCurrentStatus.Error, EnumModule.ActivePort, Constants.ActivePortNTUError, err, ''));
+            result=err;
+            Logger.updateLogs(new Log(EnumCurrentStatus.Error, EnumModule.Xcloud, Constants.XcloudGetCircuitError, err, ''));
         })
 
-        //return new ActivePortNtuRetrieveSuccessResponse(this.activePort.ActivePortNTU);
-        return result;
+        
+        return new XcloudRetrieveSuccessResponse(result);
     };
 
+
+    //Here we add new circuit in xcloud
+    async addnewcircuitforxcloud(requestBody: any) {
+
+        if (await this.isAuthorized() == false)
+            return;
+
+        let xcloud = new Xcloud();
+        xcloud.name = requestBody.name;
+        xcloud.owner = requestBody.owner;
+        xcloud.state = requestBody.state;
+        xcloud.provisioning = requestBody.provisioning;
+        xcloud.sites = requestBody.sites;
+        xcloud.tenants = requestBody.tenants;
+        xcloud.gateways = requestBody.gateways;
+        xcloud.members = requestBody.members;
+        xcloud.mac_address = requestBody.mac_address;
+        xcloud.sites_id = requestBody.sites_id;
+        xcloud.sites_name = requestBody.sites_name;
+        xcloud.tenants_id = requestBody.tenants_id;
+        xcloud.tenants_name = requestBody.tenants_name;
+        xcloud.circuitTenants = requestBody.circuitTenants;
+
+        let body = {
+            "name": xcloud.name,
+            "owner": xcloud.owner,
+            "state": xcloud.state,
+            "provisioning": xcloud.provisioning,
+            "sites": JSON.stringify(xcloud.sites),
+            "tenants": JSON.stringify(xcloud.tenants),
+            "gateways": xcloud.gateways,
+            "members": JSON.stringify(xcloud.members),
+            "mac_address": xcloud.mac_address,
+            "sites_id": xcloud.sites_id,
+            "sites_name": xcloud.sites_name,
+            "tenants_id": xcloud.tenants_id,
+            "tenants_name": xcloud.tenants_name,
+            "circuitTenants": xcloud.circuitTenants,
+        }
+
+
+        let options = {
+            url: this.baseUrl(Constants.XcloudCircuitURL),
+            method: 'POST',
+            headers: {
+                'Cookie': sessionstorage.getItem(EnumToken.XcloudCookie),
+                'content-type': 'application/json'
+            },
+            body: body,
+            json: true
+        };
+        let self = this;
+        let result;
+
+        await httppromise(options).then(function (response: any) {
+            result = response;
+            Logger.updateLogs(new Log(EnumCurrentStatus.Success, EnumModule.Xcloud, Constants.XcloudCreateCircuitSuccess, response, ''));
+        }).catch(function (err: any) {
+            result = err;
+            Logger.updateLogs(new Log(EnumCurrentStatus.Error, EnumModule.Xcloud, Constants.XcloudCreateCircuitError, err, ''));
+        })
+        return new XcloudRetrieveSuccessResponse(result);
+    };
+
+
+    //Here  update existing circuit in xcloud
+    async updateexistingcircuitforxcloud(requestBody: any) {
+
+        if (await this.isAuthorized() == false)
+            return;
+
+        let xcloud = new Xcloud();
+        xcloud.id = requestBody.id;
+        xcloud.name = requestBody.name;
+        xcloud.owner = requestBody.owner;
+        xcloud.state = requestBody.state;
+        xcloud.provisioning = requestBody.provisioning;
+        xcloud.sites = requestBody.sites;
+        xcloud.tenants = requestBody.tenants;
+        xcloud.gateways = requestBody.gateways;
+        xcloud.members = requestBody.members;
+        xcloud.mac_address = requestBody.mac_address;
+        xcloud.sites_id = requestBody.sites_id;
+        xcloud.sites_name = requestBody.sites_name;
+        xcloud.tenants_id = requestBody.tenants_id;
+        xcloud.tenants_name = requestBody.tenants_name;
+        xcloud.circuitTenants = requestBody.circuitTenants;
+
+        let body = {
+            "id": xcloud.id,
+            "name": xcloud.name,
+            "owner": xcloud.owner,
+            "state": xcloud.state,
+            "provisioning": xcloud.provisioning,
+            "sites": JSON.stringify(xcloud.sites),
+            "tenants": JSON.stringify(xcloud.tenants),
+            "gateways": xcloud.gateways,
+            "members": JSON.stringify(xcloud.members),
+            "mac_address": xcloud.mac_address,
+            "sites_id": xcloud.sites_id,
+            "sites_name": xcloud.sites_name,
+            "tenants_id": xcloud.tenants_id,
+            "tenants_name": xcloud.tenants_name,
+            "circuitTenants": xcloud.circuitTenants,
+        }
+
+
+        let options = {
+            url: this.baseUrl(Constants.XcloudCircuitURL),
+            method: 'PUT',
+            headers: {
+                'Cookie': sessionstorage.getItem(EnumToken.XcloudCookie),
+                'content-type': 'application/json'
+            },
+            body: body,
+            json: true
+        };
+        let self = this;
+        let result;
+
+
+        await httppromise(options).then(function (response: any) {
+            result = response;
+            Logger.updateLogs(new Log(EnumCurrentStatus.Success, EnumModule.Xcloud, Constants.XcloudUpdateCircuitSuccess, response, ''));
+        }).catch(function (err: any) {
+
+            Logger.updateLogs(new Log(EnumCurrentStatus.Error, EnumModule.Xcloud, Constants.XcloudUpdateCircuitError, err, ''));
+        })
+
+        return new XcloudRetrieveSuccessResponse(result);
+
+
+    };
+
+
+    //Here  validate existing circuit in xcloud
+    async validateexistingcircuitforxcloud(requestBody: any) {
+
+        if (await this.isAuthorized() == false)
+            return;
+
+        let xcloud = new Xcloud();
+        xcloud.id = requestBody.id;
+        xcloud.name = requestBody.name;
+        xcloud.owner = requestBody.owner;
+        xcloud.state = requestBody.state;
+        xcloud.provisioning = requestBody.provisioning;
+        xcloud.sites = requestBody.sites;
+        xcloud.tenants = requestBody.tenants;
+        xcloud.gateways = requestBody.gateways;
+        xcloud.members = requestBody.members;
+        xcloud.mac_address = requestBody.mac_address;
+        xcloud.sites_id = requestBody.sites_id;
+        xcloud.sites_name = requestBody.sites_name;
+        xcloud.tenants_id = requestBody.tenants_id;
+        xcloud.tenants_name = requestBody.tenants_name;
+        xcloud.circuitTenants = requestBody.circuitTenants;
+
+        let body = {
+            "id": xcloud.id,
+            "name": xcloud.name,
+            "owner": xcloud.owner,
+            "state": xcloud.state,
+            "provisioning": xcloud.provisioning,
+            "sites": JSON.stringify(xcloud.sites),
+            "tenants": JSON.stringify(xcloud.tenants),
+            "gateways": xcloud.gateways,
+            "members": JSON.stringify(xcloud.members),
+            "mac_address": xcloud.mac_address,
+            "sites_id": xcloud.sites_id,
+            "sites_name": xcloud.sites_name,
+            "tenants_id": xcloud.tenants_id,
+            "tenants_name": xcloud.tenants_name,
+            "circuitTenants": xcloud.circuitTenants,
+        }
+
+
+        let options = {
+            url: this.baseUrl(Constants.XcloudValidateCircuitURL),
+            method: 'PUT',
+            headers: {
+                'Cookie': sessionstorage.getItem(EnumToken.XcloudCookie),
+                'content-type': 'application/json'
+            },
+            body: body,
+            json: true
+        };
+        let self = this;
+        let result;
+
+console.log(options)
+        await httppromise(options).then(function (response: any) {
+            result = response;
+            Logger.updateLogs(new Log(EnumCurrentStatus.Success, EnumModule.Xcloud, Constants.XcloudValidateCircuitSuccess, response, ''));
+        }).catch(function (err: any) {
+            result = err;
+            Logger.updateLogs(new Log(EnumCurrentStatus.Error, EnumModule.Xcloud, Constants.XcloudValidateCircuitError, err, ''));
+        })
+
+        return new XcloudRetrieveSuccessResponse(result);
+    };
+
+    //Here circuit deleted in xcloud
+    async deletecircuitforxcloud(requestBody: any) {
+
+        if (await this.isAuthorized() == false)
+            return;
+
+        let xcloud = new Xcloud();
+        xcloud.id = requestBody.id;
+        xcloud.owner = requestBody.owner;
+        xcloud.members = requestBody.members;
+
+        var body = {
+            "id": xcloud.id,
+            "owner": xcloud.owner,
+            "members": JSON.stringify(xcloud.members)
+        }
+
+        let options = {
+            url: this.baseUrl(Constants.XcloudCircuitURL),
+            method: 'DELETE',
+            headers: {
+                Cookie: sessionstorage.getItem(EnumToken.XcloudCookie),
+                'content-type': 'application/json'
+            },
+            body: body,
+            json: true
+        };
+        
+        let result;
+        await httppromise(options).then(function (response: any) {
+            result= response;
+            Logger.updateLogs(new Log(EnumCurrentStatus.Success, EnumModule.Xcloud, Constants.XcloudDeleteCircuitSuccess, response, ''));
+        }).catch(function (err: any) {
+            result=err;
+
+            Logger.updateLogs(new Log(EnumCurrentStatus.Error, EnumModule.Xcloud, Constants.XcloudDeleteCircuitError, err, ''));
+        })
+        return new XcloudRetrieveSuccessResponse(result);
+    };
 
 }
 
